Clang: Reuse full type qualification from tooltips

Use qualification helper function from clangtooltipinfocollector.h
instead of Unified Symbol Resolution (USR) not to deal
with special symbols used in USR.

Affects current document filter and symbol outline.

Task-number: QTCREATORBUG-20917
Change-Id: I616ba1bf066e986e0ee75d47d30e45f94474c1cd
Reviewed-by: Marco Bubke <marco.bubke@qt.io>